# tupleannot

./: .gitignore  README.md  setup.py
python/: .gitignore  setup.cfg
python/tests/: test_bmp.py  test_sample.py
python/tupleannot/: __init__.py  primitive.py  string.py
tupleannot/: __init__.py
