[metadata]
name = tupleannot
version = attr: tupleannot.VERSION
description = binary format experiment
long_description = file: README.md, LICENSE
keywords = format
license = MIT
classifiers =
    Programming Language :: Python :: 3
test_suite = 'tests'

 [options]
 package_dir=
     = tupleannot
